--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                 <div class="search">
                     <form id="searchboxForm">
                         <input id="quary" type="text" placeholder="Enter email address">
-                        <button type="submit"><i class= <p>Subscribe</p> ></i></button>
+                        <button type="submit"><i class= <p>Subscribe</p></i></button>
                     </form>
                 </div>
             </div>
